[gd_scene load_steps=14 format=2]

[ext_resource path="res://buttons/mute_button/mute_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://themes/BoxStyle.tres" type="StyleBox" id=2]
[ext_resource path="res://levels/main_game/main_game.gd" type="Script" id=3]
[ext_resource path="res://levels/main_game/question_board.gd" type="Script" id=4]
[ext_resource path="res://levels/main_game/spawner.gd" type="Script" id=5]
[ext_resource path="res://themes/MainTheme.tres" type="Theme" id=6]
[ext_resource path="res://buttons/home_button/home_icon.png" type="Texture" id=7]
[ext_resource path="res://dog/dog.tscn" type="PackedScene" id=8]
[ext_resource path="res://levels/main_game/game_background.jpg" type="Texture" id=9]
[ext_resource path="res://levels/main_game/placaEscura.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 640, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 360 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 55, 32.5 )

[node name="MainGame" type="Node"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 9 )

[node name="Borders" type="Node2D" parent="."]

[node name="HorizontalBorderUpper" type="StaticBody2D" parent="Borders"]
position = Vector2( 640, 0 )

[node name="CollisionShapeHorizontal" type="CollisionShape2D" parent="Borders/HorizontalBorderUpper"]
shape = SubResource( 1 )

[node name="HorizontalBorderLower" type="StaticBody2D" parent="Borders"]
position = Vector2( 640, 720 )

[node name="CollisionShapeHorizontal" type="CollisionShape2D" parent="Borders/HorizontalBorderLower"]
shape = SubResource( 1 )

[node name="VerticalBorderLeft" type="StaticBody2D" parent="Borders"]
position = Vector2( 0, 360 )

[node name="CollisionShapeVertical" type="CollisionShape2D" parent="Borders/VerticalBorderLeft"]
shape = SubResource( 2 )

[node name="VerticalBorderRight" type="StaticBody2D" parent="Borders"]
position = Vector2( 1280, 360 )

[node name="CollisionShapeVertical" type="CollisionShape2D" parent="Borders/VerticalBorderRight"]
shape = SubResource( 2 )

[node name="GameTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="ScoreResetTimer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="Dog" parent="." instance=ExtResource( 8 )]
unique_name_in_owner = true

[node name="Spawner" type="Node" parent="."]
script = ExtResource( 5 )

[node name="ShortTimer" type="Timer" parent="Spawner"]
wait_time = 0.65

[node name="LongTimer" type="Timer" parent="Spawner"]
wait_time = 2.0
autostart = true

[node name="Bubbles" type="Node" parent="Spawner"]

[node name="Spawner1" type="Node2D" parent="Spawner"]
position = Vector2( 360, 600 )

[node name="Spawner2" type="Node2D" parent="Spawner"]
position = Vector2( 640, 600 )

[node name="Spawner3" type="Node2D" parent="Spawner"]
position = Vector2( 920, 600 )

[node name="QuestionBoard" type="KinematicBody2D" parent="."]
position = Vector2( 640, 360 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="QuestionBoard"]
position = Vector2( 0, -0.5 )
shape = SubResource( 3 )
disabled = true

[node name="Panel" type="Sprite" parent="QuestionBoard"]
position = Vector2( 0.623327, -1.5 )
scale = Vector2( 0.660645, 0.632075 )
texture = ExtResource( 10 )

[node name="Multiplication" type="Label" parent="QuestionBoard"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.0
margin_top = -20.0
margin_right = 54.0
margin_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 20, 17.5 )
theme = ExtResource( 6 )
custom_colors/font_color = Color( 0.996078, 0.996078, 0.996078, 1 )
text = "10x10"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="QuestionBoard"]
wait_time = 6.283
autostart = true

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 6 )

[node name="Scoreboard" type="PanelContainer" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -209.0
margin_top = 16.0
margin_right = -6.0
margin_bottom = 118.0
mouse_filter = 2
custom_styles/panel = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="UI/Scoreboard"]
margin_left = 3.0
margin_top = 3.0
margin_right = 200.0
margin_bottom = 99.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Scoreboard/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 192.0
margin_bottom = 91.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Scoreboard/MarginContainer/VBoxContainer"]
margin_right = 187.0
margin_bottom = 41.0
mouse_filter = 2

[node name="Label" type="Label" parent="UI/Scoreboard/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 122.0
margin_bottom = 41.0
text = "PONTOS:"
align = 1
valign = 1

[node name="Score" type="Label" parent="UI/Scoreboard/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 126.0
margin_right = 187.0
margin_bottom = 41.0
rect_min_size = Vector2( 61, 41 )
text = "0"
align = 2
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/Scoreboard/MarginContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 187.0
margin_bottom = 86.0
mouse_filter = 2

[node name="Label" type="Label" parent="UI/Scoreboard/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 105.0
margin_bottom = 41.0
size_flags_horizontal = 3
text = "BÃ”NUS:"

[node name="Multiplier" type="Label" parent="UI/Scoreboard/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 109.0
margin_right = 187.0
margin_bottom = 41.0
rect_min_size = Vector2( 34, 41 )
size_flags_horizontal = 3
text = "1x"
align = 2
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
margin_left = 16.0
margin_top = 16.0
margin_right = 175.0
margin_bottom = 120.0
mouse_filter = 2
custom_constants/separation = 10

[node name="Buttons" type="VBoxContainer" parent="UI/HBoxContainer"]
margin_right = 50.0
margin_bottom = 104.0
mouse_filter = 2

[node name="HomeButton" type="TextureButton" parent="UI/HBoxContainer/Buttons"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture_normal = ExtResource( 7 )
expand = true

[node name="MuteButton" parent="UI/HBoxContainer/Buttons" instance=ExtResource( 1 )]

[node name="Timer" type="PanelContainer" parent="UI/HBoxContainer"]
margin_left = 60.0
margin_right = 175.0
margin_bottom = 104.0
mouse_filter = 2
custom_styles/panel = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="UI/HBoxContainer/Timer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 112.0
margin_bottom = 101.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HBoxContainer/Timer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 104.0
margin_bottom = 93.0
mouse_filter = 2

[node name="TimerLabel" type="Label" parent="UI/HBoxContainer/Timer/MarginContainer/VBoxContainer"]
margin_right = 99.0
margin_bottom = 41.0
text = "TEMPO"
align = 1
valign = 1

[node name="Time" type="Label" parent="UI/HBoxContainer/Timer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 45.0
margin_right = 99.0
margin_bottom = 86.0
text = "120"
align = 1
valign = 1

[node name="QuitGamePopup" type="PopupPanel" parent="UI"]
pause_mode = 2
margin_right = 449.0
margin_bottom = 124.0
custom_styles/panel = ExtResource( 2 )
popup_exclusive = true

[node name="MarginContainer" type="MarginContainer" parent="UI/QuitGamePopup"]
margin_left = 3.0
margin_top = 3.0
margin_right = 446.0
margin_bottom = 121.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="UI/QuitGamePopup/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 438.0
margin_bottom = 113.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="UI/QuitGamePopup/MarginContainer/VBoxContainer"]
margin_right = 433.0
margin_bottom = 41.0
text = "Tem certeza que deseja sair?"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/QuitGamePopup/MarginContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 433.0
margin_bottom = 108.0
custom_constants/separation = 20
alignment = 1

[node name="QuitButton" type="Button" parent="UI/QuitGamePopup/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 171.0
margin_bottom = 47.0
text = "Sair"

[node name="CancelButton" type="Button" parent="UI/QuitGamePopup/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 191.0
margin_right = 328.0
margin_bottom = 47.0
text = "Cancelar"

[node name="GameOverPopup" type="PopupPanel" parent="UI"]
pause_mode = 2
margin_right = 198.0
margin_bottom = 153.0
custom_styles/panel = ExtResource( 2 )
popup_exclusive = true

[node name="MarginContainer" type="MarginContainer" parent="UI/GameOverPopup"]
margin_left = 3.0
margin_top = 3.0
margin_right = 195.0
margin_bottom = 150.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOverPopup/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 187.0
margin_bottom = 142.0

[node name="GameOverLabel" type="Label" parent="UI/GameOverPopup/MarginContainer/VBoxContainer"]
margin_right = 182.0
margin_bottom = 41.0
theme = ExtResource( 6 )
text = "Fim de Jogo"
align = 1
valign = 1

[node name="FinalScore" type="Label" parent="UI/GameOverPopup/MarginContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 182.0
margin_bottom = 86.0
grow_horizontal = 2
align = 1
valign = 1

[node name="GameOverButton" type="Button" parent="UI/GameOverPopup/MarginContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 182.0
margin_bottom = 137.0
text = "Sair"

[connection signal="result_changed" from="." to="Spawner" method="_on_MainGame_result_changed"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="timeout" from="ScoreResetTimer" to="." method="_on_ScoreResetTimer_timeout"]
[connection signal="timeout" from="Spawner/ShortTimer" to="Spawner" method="_on_ShortTimer_timeout"]
[connection signal="timeout" from="Spawner/LongTimer" to="Spawner" method="_on_LongTimer_timeout"]
[connection signal="pressed" from="UI/HBoxContainer/Buttons/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="UI/QuitGamePopup/MarginContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="UI/QuitGamePopup/MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="UI/GameOverPopup/MarginContainer/VBoxContainer/GameOverButton" to="." method="_on_GameOverButton_pressed"]
